# piles-game

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  TODO.md  docker-compose.yml  fly.toml
client/: index.html  lobby.html
client/css/: styles.css
client/js/: main.js
server/: Cargo.toml
server/src/: main.rs  websocket.rs
server/src/game/: deck.rs  lobby.rs  messages.rs  mod.rs  models.rs
